# lipm_msgs

./: CMakeLists.txt  README.md
action/: MotionControl.action  MotionPlan.action  StepPlan.action
msg/: StepTarget.msg  TrajectoryPoints.msg
